--- a/new.css
+++ b/new.css
@@ -1,3 +1,126 @@
-#go{
-    color: red;
+body{
+    font-family: 'Poppins', sans-serif;
+    margin: 0px;
+}
+.background{
+    background-image: url(images/donation3.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 500px;
+}
+.one{
+    font-size: 50px;
+    text-align: center;
+    color:yellow;
+}
+.two{
+    text-align: center;
+    color: yellow;
+    font-size: 20px;
+}
+.margin{
+    margin-bottom: 150px;
+}
+.button{
+    text-decoration: none;
+    background-image: linear-gradient( red, orange);
+    padding: 8px 25px;
+    color: white;
+    font-weight: 700;
+    border-radius: 10px;
+    margin-left: 45%;
+
+}
+.three{
+    color: black;
+    text-align: center;
+    font-size: 50px;
+}
+.four{
+    text-align: center;
+    color: gray;
+    font-size: 20px;
+    
+}
+.flexi{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+.five{
+    width: 5%;
+    margin-right: 1%;
+    padding-left: 5px;
+    padding-right: 10px;
+    box-shadow: 10px 10px 40px gray;
+    
+}
+.six{
+    width: 5%;
+    margin-right: 1%;
+    padding-left: 5px;
+    padding-right: 10px;
+    box-shadow: 10px 10px 40px gray;
+    border: 3px solid red;
+    
+}
+.buttonone{
+    text-decoration: none;
+    background-image: linear-gradient( red, orange);
+    padding: 8px 25px;
+    color: white;
+    font-weight: 700;
+    border-radius: 10px;
+
+}
+#seven{
+    width: 250px;
+    height: 250px;
+    margin-right: 2%;
+    padding-left: 10px;
+    padding-right: 5px;
+    background-color: lightblue;
+}
+#eight{
+    width: 250px;
+    height: 250px;
+    margin-right: 2%;
+    padding-left: 10px;
+    padding-right: 5px;
+    background-color: lightyellow;
+}
+#nine{
+    width: 250px;
+    height: 250px;
+    margin-right: 2%;
+    padding-left: 10px;
+    padding-right: 5px;
+    background-color: lightpink;
+}
+#image{
+    width: 200px;
+    height: 250px;
+    
+}
+
+.flexii{
+    display: flex;
+}
+.half{
+    width: 50%;
+    padding: 4%;
+}
+#ten{
+    width: 500px;
+    height: 150px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 70px;
+    padding-left: 30%;
+    padding-right: 20%;
+    align-items: center;
+    background-color: lightyellow;
+    border: 1px solid yellow;
 }
