--- a/new.css
+++ b/new.css
@@ -124,3 +124,13 @@ body{
     background-color: lightyellow;
     border: 1px solid yellow;
 }
+footer{
+    text-align: center;
+    width: 100%;
+    height: 150px;
+    color: white;
+    background-color: black;
+}
+#red{
+    color: red;
+}
